Reject font shorthand property when inherit value is present in font-family subproperty.

BUG: 169610
FIXED-IN: 4.13.2